<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learner</string>
    <string name="action_settings">Settings</string>
    <string name="load">"ЗАГРУЗИЛ"</string>
    <string name="no_words_today">Сегодня вы не добавили ни одного слова</string>
    <string name="no_words">Вы не изучили ни одного слова</string>
    <string name="no_favor">Нет избранных</string>
    <string name="no_words_for_study">Больше нет слов для изучения</string>
    <string name="exit">Хотите закончить обучение?</string>
    <string name="yas">Да</string>
    <string name="no">Нет</string>
    <string name="added_successfully">успешно добавлено</string>
    <string name="word_in_the_base">Слово уже добавлено</string>
    <string name="cant_be_space">Поля не могут быть пустыми</string>
    <string name="answer">Ответ</string>
    <string name="next">Далее</string>
    <string name="wasUpdate">Слова обновлены</string>
    <string name="nothing_to_update">Нет выбранных слов</string>
    <string name="learned">Вы выучили все слова</string>
    <string name="add_to_study">Добавлено для изучения:</string>
    <string name="no_day">Нет слов для повторения</string>
    <string name="help">Подсказка</string>
    <string name="help_show">1. Чтобы удалить слово нажмите на него.\n 2. Чтобы добавить словово в избранное поставьте галочку.</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2432219544659182/5231753150</string>
    <string name="savebase">Сохранить базу</string>
    <string name="loadbase">Загрузить базу</string>
    <string name="unknoun_file">Вы указали не верный файл. Файл должен называться dictionary.sqlite</string>
    <string name="load_base">После этого действия текущая база будет УТЕРЯНА!!! Выберите файл dictionary.sqlite после чего приложение будет перезапущено. Новая база вступит в силу после перезапуска.</string>
    <string name="base_saved">База сохранена в папку Download под именем dictionary.sqlite.
    Скопируйте этот файл на другое устройство и укажите к нему путь через меню "Загрузить базу"</string>
    <string name="main_menu">На главную</string>
    <string name="add_the_word">Найти слово</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="add_for_study">Добавить для изучения</string>
    <string name="english">Английский</string>
    <string name="russian">Русский</string>
    <string name="added_for_studying">Добавлено для изучения 0</string>
    <string name="known">Знаю</string>
    <string name="unknown">Не знаю</string>
    <string name="forget">Не помню</string>
    <string name="remember">Помню</string>
    <string name="reset">Сбросить</string>
    <string name="remove">Удалить</string>
    <string name="relearn">Учить заново</string>
    <string name="cards">Карточки</string>
    <string name="favorites">Избранное</string>
    <string name="list_of_learned_words">Список изученных слов</string>
    <string name="list_in_a_random_order">Список в случайном порядке</string>
    <string name="list_by_date">Список по дате добавления</string>
    <string name="list_in_alphabetical_order">Список в алфавитном порядке</string>
    <string name="add_to_the_list_previously_known_words">Добавить в список ранее известные слова</string>
    <string name="add_new_word">Добавить новое слово</string>
    <string name="learn_today">Учить сегодня</string>
    <string name="repeat_studied">Повторить изученное</string>
    <string name="info" translatable="false">Info</string>
    <string name="like" translatable="false">Like!</string>
    <string name="today_repetition">Повторение сегодня</string>
    <string name="first_repetition">Первое повторение(2 день)</string>
    <string name="second_repetition">Второе повторение(3 день)</string>
    <string name="third_repetition">Третье повторение(21 день)</string>
    <string name="fourth_repetition">Четвертое повторение(90 день)</string>
    <string name="calendar">Календарь</string>
    <string name="all_words">Все слова</string>
    <string name="auto_speech">Автопроизношение слова</string>
    <string name="Learning_words_in_the_order_translate_original">Повторять слова в порядке русский-ангийский</string>
    <string name="learned_learn">изучено</string>
    <string name="known_words">известно ранее</string>
    <string name="erase">Стереть</string>
    <string name="skip">Пропустить</string>
    <string name="right">Правильно</string>
    <string name="you_know">"Изучили: "</string>
    <string name="you_knew">"Уже знали: "</string>
    <string name="new_words">" новых слов"</string>
    <string name="today_learned">"Изучено сегодня: "</string>
    <string name="words">" слов"</string>
    <string name="i_read">Я прочитал</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">drawer close</string>
    <string name="alternation">"Чередование запомнить слово, ввести слово: "</string>
    <string name="general">"Общее: "</string>
    <string name="option_learn_today">Учить сегодня:</string>
    <string name="notify">Напомнить:</string>
    <string name="notify_morning">Напомнить утром</string>
    <string name="notify_evening">Напомнить вечером</string>
    <string name="option_base">"Сохранить/загрузить базу на телефон: "</string>
    <string name="notify_send_morning">Доброе утро. Лень убивает Ваши мечты</string>
    <string name="notify_send_evening">Забудь слово завтра. Сдалай сегодня</string>
    <string name="more_than_6">Не больше 5 слов для пробной версии</string>
    <string name="mmOptions">Потяните за левый край чтобы получить доступ к настройкам. Так же над изученными карточками имеется CheckBox для добавления их в раздел \"Избранное\"</string>
    <string name="toread">Уведомление</string>
    <string name="billInfo">Дорогие друзья.\nПриложение становится частично платным. В платной версии Вы получите возможность добавлять неограниченое количество ваших слов в день для изучения и отключить рекламу. Спешите приобрести полную версию приложения по акционной цене всего в 1 доллар до 15.02.2017 числа.\nДалее цена составит 3 доллара.\nВ бесплатной версии, присутствует реклама и ограничение 5 слов в день(Ограничение вступает в силу на четвертый день после установки). Спасибо что остаетесь с нами.</string>
    <string name="calendar_problem">Проблема с датой</string>
    <string name="app_info">Преимущества приложения « Английские карточки »:\n\n • Добавляйте нужные именно вам английские слова (либо любого другого языка), это позволит полностью контролировать процесс изучения, а также редактируйте их при необходимости.\n • Учите слова в порядке английский-русский и русский-английский, что намного эффективнее и в дальнейшем вам будет сложнее забыть выученные слова.\n • Повторяйте слова за любую дату по календарю.\n • Добавляйте сложные слова в избранное чтобы не искать их\n • Возможность переноса базы изученных слов на другое устройство.\n • А также впервые подсчитайте количество слов, которые вы знаете и выучили, что повысит вашу мотивацию в изучении Английского языка.\n\n Вы можете добавлять слова для изучения двумя способами. Первый, вы добавляете слова для изучения из нашего словаря, 12 000 слов располагаются по частотному принципу. Второй, если вы читаете какой-то текст, и в нем вы встречаете незнакомое слово, вы можете сразу добавить его для изучения, для этого необходимо воспользоваться поиском «Найти слово», либо же записать и сохранить новое слово (если нужного нет в словаре) и перевод к нему.\n\n Рекомендуем добавлять для лучшего усвоения не более 10 слов в день. Счетчик добавленных слов в меню сверху.\n\n После того как слова добавлены вернитесь в главное меню и нажмите «Учить сегодня». Здесь вам необходимо запоминать слова и потренироваться в написании. В последующие дни вам необходимо повторять слова на второй, третий, двадцать первый и девяностый день. Данный принцип повторения позволит надолго закрепить изученный материал. Все слова в приложении можно учить как с английского на русский, так и в обратном порядке, с русского на английский (галочка «учить слова в порядке русский-английский»). Также дотронувшись до слова на карточке вам будет озвучена транскрипция.\n В полном списке слов «Все слова» вы можете повторять все добавленные слова, как в виде карточек, так и в виде списка всех слов. Список можно сортировать тремя способами: в случайном порядке, по дате добавления и в алфавитном порядке, тут же вы можете редактировать слова.\n\n Реализован счетчик слов. Задавались ли вы когда-нибудь вопросом:«А сколько английских слов я знаю? Какой у меня словарный запас?». С этим приложением этот вопрос вы решите для себя раз и навсегда. Это приложение будет вести счет не только тем словам, которые вы изучите, но и тем словам которые вы уже знаете.\n\n Если у вас появятся замечания по работе приложения или способы улучшить его, обязательно пишите shulga.bogdan@gmail.com</string>
    <string name="btn_buy">Отключить рекламу\n Отключить ограничения</string>
    <string name="ok_please_do_not_show_again">Не показывать больше</string>
    <string name="infoAfteBuy">Чтобы изменения вступили в силу, после покупки, перезапустите приложение.</string>
</resources>
