<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/nav_header_main"/>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="3dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp">
                    <TextView
                        android:textSize="13sp"
                        android:textColor="@color/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/general"
                        android:textStyle="bold"
                        android:paddingLeft="15dp"
                        />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/auto_speech"
                        android:textSize="12sp"
                        android:textColor="@color/text"
                        android:textStyle="bold"
                        android:id="@+id/autoSpeech"
                        android:checked="false"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Learning_words_in_the_order_translate_original"
                        android:textSize="12sp"
                        android:textColor="@color/text"

                        android:textStyle="bold"
                        android:id="@+id/changeWordPlace"
                        android:checked="false"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_2"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="3dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp">
                    <TextView
                        android:textSize="13sp"
                        android:textColor="@color/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/option_learn_today"
                        android:textStyle="bold"
                        android:paddingLeft="15dp"
                        />
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/linearLayout1"
                        >
                        <TextView
                            android:textSize="12sp"
                            android:paddingLeft="10dp"
                            android:id="@+id/tv_seekBarValue"
                            android:textColor="@color/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alternation"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <SeekBar
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/seekBar"
                        android:layout_marginBottom="6dp"
                        >
                    </SeekBar>
                   </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="3dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp">
                    <TextView
                        android:textSize="13sp"
                        android:textColor="@color/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notify"
                        android:textStyle="bold"
                        android:paddingLeft="15dp"
                        />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_morning"
                        android:textSize="12sp"
                        android:textColor="@color/text"
                        android:textStyle="bold"
                        android:id="@+id/notify_morning"
                        android:checked="false"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_evening"
                        android:textSize="12sp"
                        android:textColor="@color/text"
                        android:textStyle="bold"
                        android:id="@+id/notify_evening"
                        android:checked="false"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="3dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp">
                    <TextView
                        android:textSize="13sp"
                        android:textColor="@color/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/option_base"
                        android:textStyle="bold"
                        android:paddingLeft="15dp"
                        android:paddingBottom="5dp"
                        />

                    <androidx.cardview.widget.CardView
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:orientation="horizontal"
                        card_view:cardCornerRadius="2dp"
                        card_view:cardElevation="3dp"
                        card_view:cardUseCompatPadding="true"
                        android:layout_marginTop="-5dp">
                        <com.rey.material.widget.Button
                            android:background="@color/my_background"
                            style="@style/Material.Drawable.Ripple.Wave.Light"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/savebase"
                            android:id="@+id/save_base"
                            android:textColor="@color/text"
                            app:rd_enable="true"
                            />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstyle"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:orientation="horizontal"
                        card_view:cardCornerRadius="2dp"
                        card_view:cardElevation="3dp"
                        card_view:cardUseCompatPadding="true"
                        android:layout_marginTop="-5dp">
                        <com.rey.material.widget.Button
                            android:background="@color/my_background"
                            style="@style/Material.Drawable.Ripple.Wave.Light"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/loadbase"
                            android:textColor="@color/text"
                            android:id="@+id/load_base"
                            app:rd_enable="true"
                            />
                    </androidx.cardview.widget.CardView>



                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>
</LinearLayout>